--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -20,3 +20,9 @@
     margin-left: 2vw;
     font-size: 1.5vw;
 }
+
+.styleInput {
+    border-radius: 1vw;
+    border: 0.1vw solid black;
+    padding: 0.1vw;
+}
